<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">I\'m Magic</string>

    <!--Type of languages-->
    <string name="polish_language">Polish</string>
    <string name="english_language">English</string>

    <!--Bottom navigation-->
    <string name="home_nav">Home</string>
    <string name="favourite">Favourite</string>
    <string name="notification">Notifications</string>
    <string name="cards">Cards</string>
    <string name="my_profile">My profile</string>

    <!--Buttons-->
    <string name="explore_btn">Explore</string>
    <string name="find_cards_btn">Find cards</string>
    <string name="watch_add_btn">Watch add</string>
    <string name="continuue_btn">Continue</string>
    <string name="cancel_btn">Cancel</string>
    <string name="find_more_in_shop_btn">Find more in shop</string>
    <string name="buy_card_set">Buy card set</string>
    <string name="read_cards">Read card set</string>
    <string name="search_bar">Search…</string>
    <string name="set_notification">Set notification</string>

    <!--Settings-->
    <string name="settings_about_app">About app</string>
    <string name="settings_reset_progress">Reset progress</string>
    <string name="settings_credits">Credits</string>
    <string name="settings_rate_us">Rate us</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="settings_language">Language</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_edit_profile">Edit profile</string>
    <string name="settings_follow_us">Follow us</string>



    <!--Languages -->
    <string name="polish">Polish</string>
    <string name="english">English</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>

    <string name="headlineChooseLanguage">Select the language</string>

    <!--Onboarding -->
    <string name="screen1_onboarding_headline">Welcome to I\'m magic !</string>
    <string name="screen1_onboarding_description">Welcome to the app that will provide you with a daily dose of inspiring affirmations.Check what we prepare for you…</string>

    <string name="screen2_onboarding_headline">Affirmation course</string>
    <string name="screen2_onboarding_description">Here, you\'ll explore carefully selected affirmations designed to help you cultivate a positive mindset</string>

    <string name="screen3_onboarding_headline1">Notifications</string>
    <string name="screen3_onboarding_description1">Notifications ensure you never miss a moment of inspiration</string>
    <string name="screen3_onboarding_headline2">Widgets</string>
    <string name="screen3_onboarding_description2">Keep your favorite affirmations right on your phone screen and let them be your guiding light, inspiring you to embrace each day with positivity and confidence</string>

    <string name="screen4_onboarding_headline">Create your own affirmations</string>
    <string name="screen4_onboarding_description">Unleash your inner creativity by crafting custom affirmation cards that resonate with your soul\'s desires</string>
    <string name="remind_me_latter">Remind me latter</string>
    <string name="settings">Settings</string>

    <!-- Summary -->
    <string name="summary_first_headline">Completed!</string>
    <string name="summary_second_headline_default">You’ve read 0 cards</string>

    <string name="summary_time_default">00:00</string>
    <string name="summary_amount_of_alchemy_point_default">0</string>
    <string name="summary_amount_of_experience_points_default">0</string>


    <string name="summary_headline_time">Time</string>
    <string name="summary_headline_soul_points">Soul points</string>
    <string name="summary_headline_experience_points">Experience</string>

    <!-- Leave activity dialog -->
    <string name="dialog_title">Are you sure you want to leave?</string>
    <string name="dialog_message">All progress will be lost</string>
    <string name="dialog_quit_text">Quit</string>
    <string name="dialog_stay_text">Stay</string>



    <string name="level_default">0</string>
    <string name="alchemy_points_default">0</string>
    <string name="chapter_1">CHAPTER 1</string>
    <string name="chapter_1_quote">i’m ready to start my journey</string>



    <!-- My profile -->
    <string name="HelloNameDefault">Hello X</string>
    <string name="RandomDefaultQuote">I’m the miracle for this world</string>
    <string name="statisticDefault">user statistic</string>


    <!-- Headline, Subheadline for Favourite -->
    <string name="headlineFavEmptyCards">Nothing Added Yet</string>
    <string name="subhealdineFavEmptyCards">Your heartwarming collection of liked cards with affirmations awaits. Every click here brings a smile to your face and a sprinkle of positivity to your life.</string>
    <string name="headlineFavCardSet">This is where your favorite card sets come to life. It\'s like having a library of inspiration at your fingertips. Dive into the wisdom that\'s captured your heart.</string>

    <!-- Search Category -->
    <string name="categories_headline">Categories</string>
    <string name="shop_headline" tools:ignore="ExtraTranslation">Shop</string>

    <!--Notifications -->
    <string name="screen_name_notifications" tools:ignore="ExtraTranslation">Notifications</string>
    <string name="subheadline_notification" tools:ignore="ExtraTranslation">Your notifications are patiently waiting for their debut!  Remember, every notification is a step towards a brighter, happier you!</string>
    <string name="my_created_cards">My added cards</string>
    <string name="empty_notification_description">Your notifications are patiently waiting for their debut!  Remember, every notification is a step towards a brighter, happier you!</string>
    <string name="empty_notification_headline"> Nothing in here yet </string>
    <string name="add_new_notification">Add new notification</string>
    <string name="edit_menu">Edit menu</string>
    <string name="headlineName">updateft</string>
    <string name="defaultHour">00:00AM - 00:00PM</string>
    <string name="user_icon">User icon</string>
    <string name="my_recordings">My recordings</string>
    <string name="goBackNawigationBtn">go Back Nawigation Btn</string>
    <string name="menuBtn">menu Btn</string>
    <string name="delete_all">Delete all</string>
    <string name="delete">Delete</string>
    <string name="my_added_cards">My added cards</string>
    <string name="my_added_cards_headline">Nothing to see...</string>
    <string name="my_added_cards_description">"Make it personal—share your affirmations "</string>
    <string name="add_a_new_card">Add a new card</string>
    <string name="edit_profile_text">Change name</string>
    <string name="saveBtn">Save</string>
    <string name="your_name">Your name</string>
    <string name="iamamagic">I am a magic...</string>
    <string name="gainAlchemyBoottlesBtn">Gain alchemy bottles</string>
    <string name="removeAddsForeverBtn">Remove adds forever</string>
    <string name="magicChestHeadline">Magic chest</string>
    <string name="freezStreakHeadline">Freez streak</string>
    <string name="boostersHeadline">Boosters</string>
    <string name="backgroundsHeadline">Backgrounds</string>
    <string name="RandomRewards">Rewards</string>
    <string name="alchemybottless">Alchemy bottles:</string>
    <string name="default_number">0</string>
    <string name="alert_message_insuficient_funds">Insufficient funds for purchase</string>
    <string name="set_username">What\'s your name ?</string>
    <string name="default_enerygy_number">0%</string>
    <string name="lv_headline">LV</string>
    <string name="premiumHeadline">Premium</string>
    <string name="special">Special categories</string>
    <string name="chapter_2">Chapter 2</string>
    <string name="specialbasiccategory">Buy to unlock</string>
    <string name="chapter_3">Chapter 3</string>
    <string name="chapter_4">Chapter 4</string>
    <string name="chapter_5">Chapter 5</string>
    <string name="chapter_6">Chapter 6</string>
    <string name="chapter_7">Chapter 7</string>
    <string name="chapter_8">Chapter 8</string>
    <string name="deafultZero">0</string>
    <string name="repeatSet">Repeat set</string>
    <string name="defaultHeadlineSettingsBeforePlay">I am magic</string>
    <string name="voiceAssistant">Voice assistant</string>
    <string name="showTimer">Show timer</string>
    <string name="readOutLoudHeadline">Read out loud</string>
    <string name="subcategoryName">Subcategory Name</string>
    <string name="read_btn">Read</string>
    <string name="my_equipment">Equipment</string>
    <string name="joinedMonth">Joined April 2024</string>
    <string name="exp_points_gained">exp points\n</string>
    <string name="level_default_text">LEVEL 0</string>
    <string name="welcomeUser">Hello</string>
    <string name="exp_to_deafault">0 exp to</string>
    <string name="exp_points_gained_default">123 exp points</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="all_btn_category">All</string>
    <string name="empty">" "</string>
    <string name="default_subcategory_headline">Default Subcategory Name</string>
    <string name="status">Status</string>
    <string name="status_never_used">Never used</string>
    <string name="amount_headline">Amount</string>
    <string name="explore_content">Explore content</string>


</resources>