<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home_icon"
        android:title="@string/home_nav"
        app:labelVisibilityMode="labeled"
        android:checkable="false"

        />

    <item
        android:id="@+id/favourite"
        android:icon="@drawable/heart_icon"
        android:title="@string/favourite"
        app:showAsAction="never"
        android:visible="true"
        android:checkable="false"

        />

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ring_iocn"
        android:title="@string/notification"
        android:checkable="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/cards"
        android:icon="@drawable/card_icon"
        android:title="@string/cards"
        android:checkable="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/myProfile"
        android:icon="@drawable/my_profile_icon"
        android:title="@string/my_profile"
        android:checkable="false"
        app:showAsAction="never"/>

</menu>