<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/BottomLinearLayout"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        app:srcCompat="@drawable/favcardset" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12sp"
        android:layout_weight="0"
        android:text="@string/headlineFavEmptyCards"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32sp"
        android:layout_weight="0"
        android:text="@string/headlineFavCardSet" />

    <Button
        android:id="@+id/exploreBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/primary_button_background"
        android:textColor="@color/white"
        android:text="@string/explore_btn"
        android:textSize="16sp" />
</LinearLayout>