<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:elevation="6dp"
        android:paddingBottom="18dp">

        <TextView
            android:id="@+id/levelTopBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="8dp"
            android:text="@string/notification"
            android:textAllCaps="true"
            />

        <ImageButton
            android:id="@+id/addNewNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/plus_circle_icon"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_new_notification"
            android:paddingEnd="8sp"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/editNotificationMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:src="@drawable/card_icon"
            android:background="@android:color/transparent"
            android:contentDescription="@string/edit_menu"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/item_light_grey"
      />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerNotification"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>