<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="28dp"
        android:paddingTop="16dp"

        >

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24dp"
            android:gravity="center_horizontal"
            android:text="@string/default_subcategory_headline" />



        <androidx.cardview.widget.CardView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:outlineSpotShadowColor="#B3B3B3"
            app:cardCornerRadius="15dp"
            app:cardElevation="20dp"
            android:layout_gravity="center_horizontal"


            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            >

            <ImageButton

                android:id="@+id/likeCardSetBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/heart_icon"
                android:background="@android:color/transparent"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <Button
            android:id="@+id/setNotificationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_notification"
            android:textAllCaps="false"
            android:paddingStart="16dp"
            android:layout_marginRight="8dp"
            android:drawableStart="@drawable/ring_iocn"
            android:background="@drawable/secondary_button_grey"/>

        <Button
            style="@style/PrimaryButton"
            android:id="@+id/readCardSetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/read_cards"
            android:textAllCaps="false"
            android:paddingStart="16dp"

            android:drawableStart="@drawable/play"
            android:background="@drawable/primary_button_background"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="253dp"
        android:layout_marginStart="16dp"

        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"

        android:orientation="horizontal"

        android:paddingTop="12dp"
        android:paddingBottom="16dp"

        >

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"

            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"

            android:layout_marginBottom="20dp"
            android:outlineSpotShadowColor="@color/elevation_shadow"

            app:cardCornerRadius="15dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"

                android:paddingStart="12dp"
                android:paddingTop="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="12dp">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cards" />

                <TextView
                    android:id="@+id/textView58"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="12dp"
                    android:text="@string/amount_headline" />

                <TextView
                    android:id="@+id/amountOfCards"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_number"
                    style="@style/AppTheme.SemiBold"
                    android:textSize="16dp"
                    android:textColor="@color/dark_violet_text_filter_category"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:elevation="20dp"

            android:outlineSpotShadowColor="@color/elevation_shadow"
            app:cardCornerRadius="10dp"

            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingStart="12dp"
                android:paddingTop="12dp"
                android:paddingEnd="12dp"


                android:paddingBottom="12dp">

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/activity" />

                <TextView
                    android:id="@+id/textView59"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="12dp"
                    android:text="@string/status" />

                <TextView
                    android:id="@+id/activityStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    style="@style/AppTheme.SemiBold"
                    android:textSize="16dp"
                    android:text="@string/status_never_used"
                    android:textColor="@color/dark_violet_text_filter_category"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView56"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explore_content"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:textColor="@color/dark_violet_text_filter_category"
            style="@style/AppTheme.Regular"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/quotesRc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>